--- a/README.org
+++ b/README.org
@@ -46,7 +46,11 @@ The playbook will run the necesary tasks to prepare and bootstrap kubernetes usi
 In the controlplane:
 
 #+begin_src bash
-kubeadm token create --print-join-command
+kubeadm token list
 #+end_src
+
+Use the output from ~kubeadm token create~ command in previous step from the master server and run it on the worker.
+
+Check ~kubadm join --help~ in the worker to see how to join the cluster.
 
 * Have fun!!!
